exams/18/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  # Select a deployment instead of a group of pods
  selector:
    app: front
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
