exams/18/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front
    - podSelector:
        matchLabels:
          app: db
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
          # Allow egress to the DNS service in kube-system namespace, so that all pods could reach DNS server.
    - podSelector:
        matchLabels:
          app: front
    - podSelector:
        matchLabels:
          app: db
    ports:
    - protocol: TCP
      port: 80
    # DNS port
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
